# roomsense-iq

./: .gitignore  .gitmodules  README.md
.github/workflows/: esp-idf.yaml
enclosure/: enclosure_v6.1 parts - Ball_Mount_1.stl  enclosure_v6.1 parts - Ball_Mount_2.stl  enclosure_v6.1 parts - Lid.stl  enclosure_v6.1 parts.step
firmware/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
firmware/components/adafruit-161/: CMakeLists.txt  adafruit-161.c
firmware/components/co_sensor/: CMakeLists.txt  co_sensor.c
firmware/components/direction-detection/: CMakeLists.txt  direction-detection.c
firmware/components/ha_mqtt/: CMakeLists.txt  esp_device.c  esp_discovery.c  esp_serial.c  ha_mqtt.c
firmware/components/ld2410/: CMakeLists.txt  ld2410.c
firmware/components/mpm10/: CMakeLists.txt  mpm10.c
firmware/main/: CMakeLists.txt  Kconfig.projbuild  app_nvs.c  app_nvs.h  climatesense.c  climatesense.h  dashboard.c  dashboard.h  dashboard_api.c  http_server.c  http_server.h  main.c  rgb_led.c  rgb_led.h  tasks_common.h  wifi_app.c  wifi_app.h  wifi_reset_button.c  wifi_reset_button.h
firmware/main/webpage/: app.css  app.js  index.html
firmware/main/webpage/interface/: chart.js  climatesense.css  climatesense.html  climatesense.js  dashboard.css  dashboard.html  dashboard_charts.js  dashboard_statusbar.js  exp.html  navbar.css  slideswitch.css
home assistant dashboard source code/: configuration.yaml  configuration.yaml.bak  dash-design.yaml  get-all.sh  get.sh
home assistant dashboard source code/pyscript/: calsense_generator.py  code_generator.py
(+29 files in other folders)
